# ColectivoLaguneoRythmSenior

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: DraggableMidiLabel.cpp  DraggableMidiLabel.h  MidiGenerator.cpp  MidiGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
